Fixed jump

--- a/Code/Styles/style.css
+++ b/Code/Styles/style.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .top-bar {
@@ -43,7 +44,7 @@ body {
 
 .game-box {
     width: 100%;
-    height: 92.6vh;
+    height: 93vh;
     background: linear-gradient(to bottom, #3498db, wheat, wheat, green);
     display: flex;
     flex-direction: column;
